[workspace]
resolver = "2"
members = ["src-tauri", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fynn Tang <fzpying@gmail.com>"]
repository = "https://github.com/fynntang/XPassword.git"
description = "A modern, secure and easy-to-use password manager"


[workspace.dependencies]
xpassword-config = { path = "crates/config" }
xpassword-entity = { path = "crates/entity" }
xpassword-error = { path = "crates/error" }

chrono = "0.4"
tokio = { version = "1", features = ["full"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1.19", features = ["v7"] }
thiserror = "2"
anyhow = "1"
keepass = { version = "0.8", features = ["save_kdbx4", "utilities", "_merge", "challenge_response"] }

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
